--- a/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -5,6 +5,7 @@
         mat-stroked-button
         class="cell"
         *ngFor="let key of line"
+        [ngClass]="{'blink': gameOver && isPartOfWinningCombination(key)}"
         (click)="!ticTacToeCells[key] && playerMove(key)"
         [disabled]="gameOver"
       >
