--- a/src/app/tic-tac-toe/tic-tac-toe.component.sass
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.sass
@@ -31,3 +31,12 @@
     font-size: 20px
     font-weight: bold
     text-align: center
+
+.blink
+  animation: blinker 0.5s linear infinite
+  animation-iteration-count: 3
+
+@keyframes blinker
+  50%
+    opacity: 0
+
