--- a/src/app/tic-tac-toe/tic-tac-toe.component.sass
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.sass
@@ -3,7 +3,7 @@
   border-width: 1px
   border-style: solid
   flex: 1
-  font-size: 13vh
+  font-size: 20vmin
   -webkit-user-select: none
   -khtml-user-select: none
   -moz-user-select: none
