commiting to update packages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="content" role="main">
-  <!-- Highlight Card -->
+<!-- <div class="content" role="main">
   <div class="card highlight-card card-small">
     <svg
       id="rocket"
@@ -42,7 +41,7 @@
       </g>
     </svg>
 
-    <span>{{ title }} page - Relax and have some fun.</span>
+    <span>Hey, welcome to the {{ title }} page!</span>
 
     <svg
       id="rocket-smoke"
@@ -61,8 +60,11 @@
       />
     </svg>
   </div>
-</div>
+</div> -->
 
-<app-tic-tac-toe></app-tic-tac-toe>
+<!-- <app-home></app-home> -->
+<!-- <app-tic-tac-toe></app-tic-tac-toe> -->
 
-<router-outlet></router-outlet>
+<app-toolbar>
+  <router-outlet></router-outlet>
+</app-toolbar>
