trying to make ngx-auth work

--- a/src/app/components/tic-tac-toe/tic-tac-toe.component.sass
+++ b/src/app/components/tic-tac-toe/tic-tac-toe.component.sass
@@ -9,6 +9,7 @@
   -moz-user-select: none
   -ms-user-select: none
   cursor: pointer
+  min-height: 35px
 
   &.top
     border-top: hidden
@@ -20,10 +21,10 @@
     border-bottom: hidden
 
 .matrix
-  height: calc(100% - 11rem)
   display: flex
-  margin: 0px 10vh
   flex-direction: column
+  margin: 3vh 10vh 0 10vh
+  height: calc(100% - 11rem)
 
 .line
   display: flex
