--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,13 +1,16 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport>
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="/">Home</a>
-      <a mat-list-item href="/online">Play Online</a>
-      <a mat-list-item href="/play">Play Offline</a>
+      <a
+        mat-list-item
+        *ngFor="let option of menuOptions"
+        [routerLink]="option.link"
+        (click)="drawer.toggle()"
+      >
+        <mat-icon>{{ option.icon }}</mat-icon>
+        {{ option.title }}
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -17,10 +20,9 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+      >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <!-- <span>tic-tac-toe</span> -->
       <ngx-auth-firebaseui-avatar></ngx-auth-firebaseui-avatar>
     </mat-toolbar>
     <ng-content></ng-content>
