--- a/src/app/components/online-match-settings/online-match-settings.component.html
+++ b/src/app/components/online-match-settings/online-match-settings.component.html
@@ -39,7 +39,7 @@
   "
 >
   <p>Or you can create a new match...</p>
-  <button mat-stroked-button routerLink="play" (click)="createNewMatch()">
+  <button mat-stroked-button (click)="createNewMatch()">
     Create a new match
   </button>
 </div>
