--- a/src/app/components/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/components/tic-tac-toe/tic-tac-toe.component.html
@@ -7,9 +7,8 @@
         *ngFor="let cell of line"
         [ngClass]="cell.style"
         (click)="
-          !cell?.value &&
-            matrix.movementTrigger$.next({ id: cell.id, player: player1 }) &&
-            opponentTurn$.next(true)
+          !cell?.value && matrix.movementTrigger$.next({ id: cell.id, player: player1 });
+          !cell?.value && opponentTurn$.next(true);
         "
         [disabled]="gameOver || (opponentTurn$ | async)"
       >
