--- a/src/app/components/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/components/tic-tac-toe/tic-tac-toe.component.html
@@ -22,7 +22,7 @@
     <button
       mat-raised-button
       color="primary"
-      (click)="matrix.resetTrigger$.next()"
+      (click)="matrix.resetTrigger$.next(undefined)"
     >
       Play again
     </button>
